# ddbstreams-kcl

./: CHANGELOG.md  Cargo.toml  NOTICE  README.md  codecov.yml
.github/workflows/: ci.yml  publish.yml  release.yml
clients/dotnet/: README.md
clients/dotnet/Amazon.DynamoDBStreams.Consumer/: Amazon.DynamoDBStreams.Consumer.csproj  AttributeValueConverter.cs  Record.cs  RecordFormat.cs  SdkAttributeValues.cs  Sidecar.cs  Worker.cs
clients/dotnet/Amazon.DynamoDBStreams.Consumer.Tests/: Amazon.DynamoDBStreams.Consumer.Tests.csproj  AttributeValueTests.cs  ConformanceTests.cs  LiveSmokeTests.cs  SdkAttributeValuesTests.cs
clients/go/: README.md  env_test.go  go.mod  record.go  record_test.go  sidecar.go  sidecar_download_test.go  worker.go  worker_test.go
clients/java/: README.md  pom.xml
clients/java/src/main/java/com/amazon/dynamodbstreams/consumer/: InitialPosition.java  Worker.java  WorkerConfig.java
clients/java/src/test/java/com/amazon/dynamodbstreams/consumer/: WorkerEnvTest.java
clients/node/: README.md  package.json
clients/node/src/: index.d.ts  index.js  index.ts  record.js  sidecar.js  worker.js  worker.ts
clients/node/test/: conformance.test.js  download.test.js  record.test.js
clients/python/: .gitignore  README.md  build_wheel.sh  pyproject.toml  setup.py
clients/python/examples/: live_smoke.py
clients/python/src/ddbstreams_kcl/: __init__.py  record.py  worker.py
clients/python/src/dynamodb_streams_consumer/: __init__.py  worker.py
clients/python/tests/: fake_sidecar.py  test_client.py  test_conformance.py
clients/rust/: Cargo.toml  README.md
clients/rust/src/: lib.rs
clients/rust/tests/: live_consumer.rs  live_latest.rs
conformance/: README.md  replay_sidecar.py
conformance/fixtures/: basic_delivery.json  empty_shutdown.json  multi_batch_same_shard.json
core/: REFERENCES.md
core/src/: backoff.rs  cleanup.rs  coordinator.rs  leader.rs  lib.rs  metrics.rs  multistream.rs  taker.rs
docs/: multiplexing-design.md
formal/: Multiplexing.cfg  Multiplexing.tla  README.md
lease-dynamodb/src/: cleanup.rs  dynamodb.rs  lib.rs
lease-dynamodb/tests/: live_steal.rs  live_table_config.rs
sidecar/src/: main.rs  otel.rs
source-ddbstreams/: Cargo.toml
source-ddbstreams/src/: aws.rs  lib.rs  record.rs
source-ddbstreams/tests/: live_ddbstreams.rs  live_max_records.rs
tests/soak/: README.md  run_soak.sh  soak.py
tests/soak/ec2/: bootstrap.sh  permissions.json
worker/: Cargo.toml
worker/src/: aws.rs  fleet.rs  lib.rs
worker/tests/: live_fleet.rs  live_max_concurrency.rs  live_reshard.rs  live_worker.rs  scale_pool.rs
