[workspace]
resolver = "2"
members = [
    "core",
    "source-ddbstreams",
    "lease-dynamodb",
    "worker",
    "protocol",
    "sidecar",
    "clients/rust",
]

# Single source of truth for the Rust crate version across the workspace
# (lockstep via `version.workspace = true`). The language clients carry their
# own version fields (clients/<lang>/…) and are bumped in lockstep to match,
# so a single `vX.Y.Z` git tag corresponds to one repo-wide version.
[workspace.package]
version = "0.1.4"
edition = "2021"
license = "Apache-2.0"
