[package]
name = "ddbstreams-kcl-source-ddbstreams"
version = "0.0.1"
edition = "2021"
description = "DynamoDB Streams StreamSource for ddbstreams-kcl-core. Pure DescribeStream shard-graph builder now; the async aws-sdk-dynamodbstreams adapter lands next behind an optional feature."

# Kept dependency-free for now so the shard-graph logic builds/tests with zero
# network. The async AWS SDK adapter (aws-sdk-dynamodbstreams) will be added
# behind an optional `aws` feature so this pure logic always compiles/tests.
[dependencies]
ddbstreams-kcl-core = { path = "../core" }
