[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "amazon-dynamodb-streams-consumer"
version = "0.1.1"
description = "Python client for amazon-dynamodb-streams-consumer: a JVM-free DynamoDB Streams KCL consumer. Spawns the Rust sidecar and delivers ordered, checkpointed change records to your processor."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "Apache-2.0" }
# Intentionally zero runtime dependencies — the client is a thin stdio bridge to
# the Rust sidecar, which owns all AWS/coordination logic.
dependencies = []

[tool.setuptools.packages.find]
where = ["src"]

# The sidecar binary is dropped into src/dynamodb_streams_consumer/_bin/ by the
# build script before packaging, and shipped inside the (platform-specific) wheel.
[tool.setuptools.package-data]
dynamodb_streams_consumer = ["_bin/*", "py.typed"]
